<resources>
    <string name="app_name">Car Dashboard</string>
    <string name="shuffle_btn_text">Shuffle my music</string>
    <string name="start_btn_text">Start</string>
    <string name="end_btn_text">End</string>
    <string name="maps_search_placeholder">Where are we going?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_btn">Go</string>
    <string name="settings_btn">Settings</string>
    <string name="stats_btn">Statistics</string>
    <string name="alerts_btn">Alerts</string>
    <string name="stats_panel_title">Statistics</string>
    <string name="alerts_panel_title">Alerts</string>
    <string name="home_btn">Go Home</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Home Address</string>
    <string name="pref_default_display_name">London</string>
    <string name="pref_title_track_on_nav">Start Tracking on Navigation Start</string>
    <string name="pref_title_ip_addr">IP Address</string>
    <string name="pref_default_ip_addr">192.168.0.10</string>
    <string name="pref_title_ip_port">Port</string>
    <string name="pref_default_ip_port">35000</string>
    <string name="pref_title_make">Manufacturer</string>
    <string name="pref_default_make">Audi</string>

    <string name="title_activity_stats">StatsActivity</string>
    <string name="title_activity_alerts">AlertsActivity</string>
    <string name="live_speed">Speed:</string>
    <string name="live_fuel_consumption">Fuel Consumption:</string>
    <string name="live_fuel_pressure">Fuel Pressure:</string>
    <string name="live_revs">Revs:</string>
    <string name="default_ip_addr">192.168.0.10</string>

    <string name="play_button_text">Play</string>
    <string name="pause_button_text">Pause</string>
    <string name="skip_button_text">&gt;&gt;</string>
    <string name="prev_button_text">&lt;&lt;</string>
    <string name="journey_statistics_title">Journey Statistics</string>
    <string name="statistics_title">Statistics</string>
    <string name="distance_format_title">Distance Format</string>
    <string name="miles">Miles</string>
    <string name="all_time_speed_average">Speed avg:</string>
    <string name="all_time_consumption_rate_average">Consumption rate avg:</string>
    <string name="alerts_title">Alerts</string>
    <string name="pref_header_obd">OBD2 Reader</string>
    <string name="live_subheading">Live</string>
    <string name="all_time_subheading">All Time</string>
    <string name="all_time_revs_average">Revs Avg</string>
    <string name="all_time_pressure_average">Pressure Avg</string>
    <string name="journey_avg_revs">Revs:</string>
    <string name="journey_avg_pressure">Pressure:</string>
    <string name="journey_avg_speed">Speed:</string>
    <string name="journey_avg_consumption">Consumption:</string>
    <string name="journey_averages_subheading">Averages</string>
    <string name="journey_maximums_subheading">Maximums</string>
    <string name="journey_heading">Journey</string>
    <string name="journey_max_speed">Speed:</string>
    <string name="journey_max_revs">Revs:</string>
    <string name="journey_max_pressure">Pressure:</string>
    <string name="journey_max_consumption">Consumption:</string>
    <string name="no_trouble_codes_home">No problems to report.</string>

</resources>
