<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.co.joshcorne.cardashboard.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/mapsSearch"
        android:textAlignment="textStart"
        android:hint="@string/maps_search_placeholder"
        android:layout_toStartOf="@+id/mapsSearchBtn"
        android:layout_above="@+id/btnPanel"/>

    <Button
        android:text="@string/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/settingsBtn"
        android:layout_alignParentEnd="true"
        android:onClick="openSettings"/>

    <Button
        android:text="@string/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapsSearchBtn"
        android:onClick="goSomewhere"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mapsSearchBtn"
        android:stretchColumns="0,1"
        android:weightSum="5"
        android:id="@+id/btnPanel"
        android:layout_above="@+id/settingsBtn">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/start_btn_text"
                android:layout_height="fill_parent"
                android:id="@+id/journeyBtn"
                android:onClick="startJourney"
                android:layout_width="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <requestFocus />
            </Button>

            <Button
                android:text="@string/home_btn"
                android:id="@+id/homeBtn"
                android:onClick="goHome"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"/>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_weight="3">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="openStats"
                android:fillViewport="true"
                android:id="@+id/stats_panel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openStats"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/stats_panel_title"
                        android:layout_width="158dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/stats_panel_title"
                        android:textStyle="normal|bold"
                        android:textAlignment="center"
                        android:onClick="openStats"

                        android:textSize="24sp"/>

                    <TextView
                        android:text="@string/live_subheading"
                        android:layout_width="126dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/live_subheading"
                        android:textSize="18sp"
                        android:textStyle="normal|bold"/>

                    <TextView
                        android:text="@string/live_speed"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/speedTextView"/>

                    <TextView
                        android:text="@string/live_fuel_consumption"
                        android:layout_width="152dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/consumptionTextView"/>

                    <TextView
                        android:text="@string/live_fuel_pressure"
                        android:layout_width="151dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/pressureTextView"/>

                    <TextView
                        android:text="@string/live_revs"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/revsTextView"/>

                    <TextView
                        android:text="@string/all_time_subheading"
                        android:layout_width="108dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/all_time_subheading"
                        tools:text="All time"
                        android:textSize="18sp"
                        android:textStyle="normal|bold"/>

                    <TextView
                        android:text="@string/all_time_speed_average"
                        android:layout_width="152dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/allTimeSpeedAvgTextView"/>

                    <TextView
                        android:text="@string/all_time_revs_average"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content"
                        android:maxWidth="200dp"
                        android:id="@+id/allTimeRevsAvgTextView"/>

                    <TextView
                        android:text="@string/all_time_consumption_rate_average"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content"
                        android:maxWidth="200dp"
                        android:id="@+id/allTimeConsumptionAvgTextView"/>

                    <TextView
                        android:text="@string/all_time_pressure_average"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content"
                        android:maxWidth="200dp"
                        android:id="@+id/allTimePressureAvgTextView"/>

                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="openAlerts"
                android:fillViewport="true"
                android:id="@+id/alerts_panel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:onClick="openAlerts">

                    <TextView
                        android:text="@string/alerts_panel_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alerts_panel_title"
                        android:textStyle="normal|bold"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:onClick="openAlerts"/>

                    <TextView
                        android:text="@string/no_trouble_codes_home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/code"/>
                </LinearLayout>
            </ScrollView>
        </TableRow>

    </TableLayout>

    <Button
        android:text="@string/play_button_text"
        android:id="@+id/playMusicBtn"
        android:layout_above="@+id/settingsBtn"
        android:layout_centerHorizontal="true"
        android:onClick="startMusic"
        android:background="@drawable/round_button"
        android:layout_width="60dp"
        android:layout_height="60dp"/>

    <Button
        android:text="@string/prev_button_text"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/prevMusicBtn"
        android:onClick="previousSong"
        android:background="@drawable/round_button"
        android:layout_marginEnd="45dp"
        android:layout_above="@+id/settingsBtn"
        android:layout_toStartOf="@+id/playMusicBtn"/>

    <Button
        android:text="@string/skip_button_text"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/nextMusicBtn"
        android:onClick="skipSong"
        android:background="@drawable/round_button"
        android:layout_above="@+id/settingsBtn"
        android:layout_toEndOf="@+id/playMusicBtn"
        android:layout_marginStart="45dp"/>

</RelativeLayout>
